SchemaStrategy#doExecute()改为由业务代码自行关闭连接库连接